# rdb-template

./: .gitignore  Makefile  README.md  compose.yaml  docker-compose.yml  go.mod  sqlc.yaml  users.ddl  xorm.go
fixtures/: setup.sh  which.sh
fixtures/sql/: group_by.sql  having.sql  tasks.ddl  union.sql  users.ddl  with.sql
go/: go.mod  go.sum  xorm.go
go/config/: config.go
go/gorm/: main.go
go/gorm/sort/: sort.go
go/gorm/transaction/: transaction.go
go/model/: user.go
go/sqlc/: main.go
go/sqlc/book/: db.go  models.go  queries.sql.go
go/sqlx/: helper_test.go  query.go  query_test.go
go/standard/: main.go  main_test.go
go/xorm/: main.go  sample_1.go  transaction.go
haskell/: LICENSE  README.md  haskell.cabal
haskell/app/: Main.hs
script/: insert.sh  update.sh
sql/: users.ddl  users.dml
sqlc/: queries.sql  schema.sql
